question component,simple answers calculating logic implementation

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -3,6 +3,6 @@
     <p>
       Discover if you're an introvert or extrovert by answering a few questions.
     </p>
-    <button>Start Test</button>
+    <button routerLink="/question">Start Test</button>
 </div>
   
