--- a/src/app/result/result.component.html
+++ b/src/app/result/result.component.html
@@ -1,2 +1,5 @@
-<p>{{personalityTrait}}</p>
-<button routerLink="/welcome">fs</button>
+<div class="result-container" [@fadeInOut]>
+    <p>Based on your answers to the questions, your personality trait is: </p> <h1>{{personalityTrait}}</h1>
+    <button routerLink="/welcome">Back</button>
+</div>
+  
