--- a/src/app/question/question.component.scss
+++ b/src/app/question/question.component.scss
@@ -1,6 +1,9 @@
 /* Styles for the question container */
 .question-container {
-  width: 600px;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   margin: 0 auto;
   padding: 20px;
   background-color: #a3b1d3;
@@ -12,7 +15,7 @@
 
 /* Styles for the question title */
 .question-title {
-  font-size: 25px;
+  font-size: 30px;
   font-weight: bold;
   margin-bottom: 20px;
 }
@@ -56,6 +59,7 @@ input[type="text"] {
     font-size: 25px;
     text-align: center;
     transition: border-color 0.3s ease-in-out;
+    cursor: pointer;
   }
   
   input[type="text"]:disabled {
